# boilerplate-fullstack-pyreact

./: .pre-commit-config.yaml  CODEOWNERS  Makefile  README.md  docker-compose.yml
api/: Dockerfile  env  pyproject.toml
api/api/: main.py
api/api/core/: config.py
api/api/crud/: account.py  base.py
api/api/db/: base.py  base_class.py
api/api/models/: __init__.py  account.py
api/api/schemas/: account.py
